--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.18.0",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
