--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "@babel/plugin-proposal-private-property-in-object": "*"
   },
   "engines": {
     "node": "18",
