--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "fuse.js": "^6.6.2",
+    "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
