--- a/frontend/harmontown-search/package.json
+++ b/frontend/harmontown-search/package.json
@@ -21,6 +21,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "csv-loader": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "typescript": "^5"
