--- a/frontend/harmontown-search/tsconfig.json
+++ b/frontend/harmontown-search/tsconfig.json
@@ -23,6 +23,6 @@
     },
     "baseUrl": "./app"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "declarations.d.ts"],
   "exclude": ["node_modules"]
 }
