--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "./deploy.sh"
   },
   "engines": {
     "node": "18",
@@ -17,6 +18,7 @@
     "fuse.js": "^7.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.shuffle": "^4.2.0",
+    "markdown-it": "^14.0.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.shuffle": "^4.2.9",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
@@ -34,6 +37,7 @@
     "csv-loader": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "raw-loader": "^4.0.2",
     "typescript": "^5"
   }
 }
