--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.12",
     "react-tooltip": "^5.25.0",
     "sass": "^1.69.5",
     "typesense": "^1.7.2"
