--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.12",
+    "react-kofi-overlay": "^1.0.0",
     "react-tooltip": "^5.25.0",
     "sass": "^1.69.5",
     "typesense": "^1.7.2"
