upgrade all frontend deps to latest + add prettier formatting

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 episodes/*.mp3
 episodes/*.mp4
 transcripts/original/*.tsv
+transcripts/venv/
 transcripts/corrected/*.tsv
 frontend/public/episodes/
 frontend/public/transcripts/
