update typesense cert path

--- a/server/docker-compose.prod.yml
+++ b/server/docker-compose.prod.yml
@@ -11,5 +11,5 @@ services:
       - type: bind
         source: ./typesense-server.ini
         target: /config/typesense-server.ini
-      - /etc/letsencrypt/live/api.harmonsearch.com:/etc/letsencrypt/live/api.harmonsearch.com
+      - /etc/letsencrypt/live/api.harmonsearch.com:/cert
     command: '--config=/config/typesense-server.ini'
