mount entire letsencrypt dir in container https://stackoverflow.com/a/67124350

--- a/server/typesense-server.ini
+++ b/server/typesense-server.ini
@@ -8,5 +8,5 @@ api-port = 443
 data-dir = /data
 enable-cors = true
 cors-domains = https://harmonsearch.com
-ssl-certificate = /cert/fullchain.pem
-ssl-certificate-key = /cert/privkey.pem
+ssl-certificate = /etc/letsencrypt/live/api.harmonsearch.com/fullchain.pem
+ssl-certificate-key = /etc/letsencrypt/live/api.harmonsearch.com/privkey.pem
