--- a/server/docker-compose.prod.yml
+++ b/server/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       - '443:443'
     volumes:
       - ./typesense-data:/data
-      - /etc/letsencrypt/live/api.harmonsearch.com:/cert:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
       - type: bind
         source: ./typesense-server.ini
         target: /config/typesense-server.ini
