--- a/server/typesense-server.ini
+++ b/server/typesense-server.ini
@@ -2,11 +2,8 @@
 
 [server]
 
-; Add a private API key below. Keep it secret. Keep it safe.
-api-key =
-api-port = 443
+; Default for local development. Use a secure key for production.
+api-key = xyz
 data-dir = /data
 enable-cors = true
-cors-domains = https://harmonsearch.com
-ssl-certificate = /etc/letsencrypt/live/api.harmonsearch.com/fullchain.pem
-ssl-certificate-key = /etc/letsencrypt/live/api.harmonsearch.com/privkey.pem
+cors-domains = http://localhost:3000,https://harmonsearch.com
